WIP resolving issues with right- or left-aligned images

--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -399,7 +399,7 @@ p {
   padding-top: 0;
   margin-bottom: 1.45rem;
   font-size: 18px;
-  font-weight: 500;
+  font-weight: 400;
   line-height: 1.5;
 }
 figure {
